fix delete button

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
     <!--  page footer -->
     <div data-role="footer" data-theme='a' class="footer" >
-      <h1>Copyright 2021 Ian Olson for PROG 209</h1>
+      <h1>Copyright 2022 Ian Olson for PROG 209</h1>
     </div>
   </div>
   <!-- End of  page ------------------------------------------------------------------>
@@ -74,13 +74,13 @@
             <label for="note" >Notes: </label> 
             <textarea id="oneNote" size="50" required maxlength= "50"></textarea>
           </div>
-          <input type="button" value="Save" id="buttonSave" data-inline="true" class="center"/>
-          <input type="button" value="Delete" id="buttonDelete" data-inline="true" class="center" style="background: rgb(216, 11, 11)"/>
+          <input type="button" value="Add Car" id="buttonSave" data-inline="true" class="center"/>
+          <input type="button" value="Clear" id="buttonDelete" data-inline="true" class="center" style="background: rgb(216, 11, 11)"/>
         </div>
 		
         <!--   page footer -->
         <div data-role="footer" data-theme='a'class="footer" >
-          <h1>Copyright 2021 Ian Olson for PROG 209</h1>
+          <h1>Copyright 2022 Ian Olson for PROG 209</h1>
         </div>
       </div>
       <!-- End of  page ------------------------------------------------------------------>
@@ -108,7 +108,7 @@
 
         <!--   page footer -->
         <div data-role="footer" data-theme='a'class="footer" >
-          <h1>Copyright 2021 Ian Olson for PROG 209</h1>
+          <h1>Copyright 2022 Ian Olson for PROG 209</h1>
         </div>
       </div>
       </div>
@@ -140,14 +140,14 @@
             <label for="note" >Notes: </label> 
             <textarea id="oneNote2" size="50" required maxlength= "50"></textarea>
           </div>
-          <input type="button" value="Save" id="buttonSave" data-inline="true" class="center"/>
-          <input type="button" value="Delete" id="buttonDelete" data-inline="true" class="center" style="background: rgb(216, 11, 11)"/>
+          <input type="button" value="Save" id="buttonSave2" data-inline="true" class="center"/>
+          <input type="button" value="Delete" id="buttonDelete2" data-inline="true" class="center" style="background: rgb(216, 11, 11)"/>
         </div>
 
 
         <!--   page footer -->
         <div data-role="footer" data-theme='a' class="footer">
-          <h1>Copyright 2021 Ian Olson for PROG 209</h1>
+          <h1>Copyright 2022 Ian Olson for PROG 209</h1>
         </div>
       </div>
       </div>
